--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-plaid-link": "^3.5.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "glob": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
